--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,9 +20,5 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Build
-      run: |
-        python -c "import ackermann"
-        mv ackermann.pyc ackermann-python.pyc
     - name: Run
-      run: python ackermann-python 3 12
+      run: python ackermann.py 3 12
