--- a/.github/workflows/pascal.yml
+++ b/.github/workflows/pascal.yml
@@ -19,6 +19,6 @@ jobs:
       - uses: fabasoad/pascal-action@v1.0.0
         id: pascal
         with:
-          path: './ackermann.pas 3 12'
+          path: './ackermann.pas'
       - name: Print result
         run: echo "${{ steps.pascal.outputs.result }}"
